python-web-app/deployment.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-app
  labels:
    app: python-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: python-app
  template:
    metadata:
      labels:
        app: python-app
    spec:
      containers:
      - name: python-app-container
        image: pankajkain/python-app:v1
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: db-connection
          mountPath: /opt/config       
        - name: db-connection-secret
          mountPath: /opt/secrets     
      volumes:
      - name: db-connection
        configMap:
          name: test-cm
      - name: db-connection-secret 762171442
        secret:
          secretName: test-secret
