python-web-app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: python-service
spec:
  type: NodePort
  selector:
    app: python-app # must be same as deployment yaml template label app:
  ports:
    - port: 80
      targetPort: 8000 # my django application running on
      nodePort: 30007
